--- a/app/views/wizard/wizard.scala.html
+++ b/app/views/wizard/wizard.scala.html
@@ -36,7 +36,7 @@ Copyright 2013 Anthony Christe
       $('#opq-wizard').on('finished', function(e, data) {
         //var data = getMapInfo();
         //updateLatLong(data);
-        //document.wizardForm.submit();
+        document.wizardForm.submit();
       });
       });
 
