--- a/app/views/admin/updatedatashare.scala.html
+++ b/app/views/admin/updatedatashare.scala.html
@@ -25,8 +25,8 @@ Copyright 2013 Anthony Christe
 
 @admin("Data Sharing",
   "To share your data anonymously, select the check box under 'Data Sharing'. " +
-  "Select the grid square at a zoom level that contains your OPQ device and in which " +
-  "you feel comfortable") {
+      "Select the grid square at a zoom level that contains your OPQ device and in which " +
+      "you feel comfortable") {
 
   <div class="span9">
     <table class="table table-condensed well well-small">
@@ -40,38 +40,46 @@ Copyright 2013 Anthony Christe
         </tr>
       </thead>
       <tbody>
-        @form(
-          routes.Administration.updateDataSharing(Long.parseLong(opqDeviceForm("primaryKey").value)),
-          'id -> "updateCdsiForm",
-          'class -> "form-inline"
-        ) {
-          <tr>
-            @* Device Id *@
-            <td>
-            @inputText(opqDeviceForm("deviceId"), '_showConstraints -> false, '_label -> "",
-              'class -> "input-medium", 'readonly -> "readonly")
-            </td>
+      @form(
+        routes.Administration.updateDataSharing(Long.parseLong(opqDeviceForm("primaryKey").value)),
+        'id -> "updateDataSharingForm",
+        'class -> "form-inline"
+      ) {
+        <input type="hidden" id="northEastLatitude" name="northEastLatitude" />
+        <input type="hidden" id="northEastLongitude" name="northEastLongitude" />
+        <input type="hidden" id="southWestLatitude" name="southWestLatitude" />
+        <input type="hidden" id="southWestLongitude" name="southWestLongitude" />
+        <tr>
+          @* Device Id *@
+          <td>
+          @inputText(opqDeviceForm("deviceId"), '_showConstraints -> false, '_label -> "",
+            'class -> "input-medium", 'readonly -> "readonly")
+          </td>
 
-            <td>
-            @inputText(opqDeviceForm("description"), '_showConstraints -> false, '_label -> "",
-              'class -> "input-medium", 'readonly -> "readonly")
-            </td>
+          <td>
+          @inputText(opqDeviceForm("description"), '_showConstraints -> false, '_label -> "",
+            'class -> "input-medium", 'readonly -> "readonly")
+          </td>
 
-            @* Sharing Data *@
-            <td>
-              @checkbox(opqDeviceForm("sharingData"), '_showConstraints -> false, '_label -> "")
-              <input type="hidden" name="sharingData" value="false" />
-            </td>
+          @* Sharing Data *@
+          <td>
+            @checkbox(opqDeviceForm("sharingData"), '_showConstraints -> false, '_label -> "")
+            <input type="hidden" name="sharingData" value="false" />
+          </td>
 
-            <td>
-              <input type="button" id="saveBtn" class="btn btn-warning pull-right" value="Save">
-            </td>
-          </tr>
-        }
+          <td>
+          @inputText(opqDeviceForm("gridId"), '_showConstraints -> false, '_label -> "",
+            'class -> "input-medium", 'readonly -> "readonly")
+          </td>
+
+          <td>
+            <input type="submit" id="saveBtn" class="btn btn-warning pull-right" value="Save">
+          </td>
+        </tr>
+      }
       </tbody>
     </table>
   </div>
-
   @*
   Start of cdsi map
   *@
@@ -79,9 +87,23 @@ Copyright 2013 Anthony Christe
   <script src="@routes.Assets.at("javascripts/grid-map.js")" type="text/javascript"></script>
   <div id="data-sharing-map" class="span9"></div>
   <script type="text/javascript">
-    /* Make sure the leaflet CSS is loaded */
-    addDynamicCss ( '  @routes.Assets.at("stylesheets/leaflet.css") ');
-    var g = grid;
-    grid.initMap("data-sharing-map", g.island.OAHU.latLng, g.island.OAHU.defaultZoom);
+  /* Make sure the leaflet CSS is loaded */
+  addDynamicCss ('@routes.Assets.at("stylesheets/leaflet.css")');
+
+  function onGridClick(feature, layer) {
+    $(function () {
+      $('#gridId').val(feature.properties.id);
+      $('#northEastLatitude').val(feature.properties.boundingBox.getNorthEast().lat);
+      $('#northEastLongitude').val(feature.properties.boundingBox.getNorthEast().lng);
+      $('#southWestLatitude').val(feature.properties.boundingBox.getSouthWest().lat);
+      $('#southWestLongitude').val(feature.properties.boundingBox.getSouthWest().lng);
+    });
+
+    layer.setStyle({fillColor: 'red'});
+  }
+
+  var g = grid ;
+  g.setOnGridClickCallback ( onGridClick ) ;
+  grid.initMap ( "data-sharing-map", g.island.OAHU.latLng, g.island.OAHU.defaultZoom ) ;
   </script>
 }
