--- a/app/views/privatemonitoring/privatemeasurements.scala.html
+++ b/app/views/privatemonitoring/privatemeasurements.scala.html
@@ -24,9 +24,9 @@ Copyright 2013 Anthony Christe
     FieldConstructor(twitterBootstrapInput.render)
   }
 
-@main("Private Power Quality Monitoring", menu("Private Power Quality Monitoring", false)) {
-  <div class="row">
-    <div class="span12">
+@privatepowerqualitymonitoring("Private Measurements",
+  "This page allows you to manage and create power quality events.") {
+    <div class="span9">
       <table class="table table-striped table-bordered">
         <thead>
           <tr>
@@ -50,5 +50,4 @@ Copyright 2013 Anthony Christe
         </tbody>
       </table>
     </div>
-  </div>
 }
