Menus are now in a correct working state, but still using the hack-ish method.

--- a/app/views/admin/admindatashare.scala.html
+++ b/app/views/admin/admindatashare.scala.html
@@ -23,7 +23,7 @@ Copyright 2013 Anthony Christe
     FieldConstructor(twitterBootstrapInput.render)
   }
 
-@admin("Data Sharing",
+@admin("Data Administration",
   "This page allows you to configure whether or not you want to anonymously share your power quality data.") {
 
   <div class="span9">
