--- a/app/views/admin/updatedatashare.scala.html
+++ b/app/views/admin/updatedatashare.scala.html
@@ -23,7 +23,7 @@ Copyright 2013 Anthony Christe
     FieldConstructor(twitterBootstrapInput.render)
   }
 
-@admin("Data Sharing",
+@admin("Data Administration",
   "To share your data anonymously, select the check box under 'Data Sharing'. " +
       "Select the grid square at a zoom level that contains your OPQ device and in which " +
       "you feel comfortable") {
