--- a/app/views/privatemonitoring/privatemeasurements.scala.html
+++ b/app/views/privatemonitoring/privatemeasurements.scala.html
@@ -24,7 +24,7 @@ Copyright 2013 Anthony Christe
     FieldConstructor(twitterBootstrapInput.render)
   }
 
-@privatepowerqualitymonitoring("Private Measurements",
+@privatepowerqualitymonitoring("Private Power Quality Monitoring - Private Measurements",
   "This page allows you to manage and create power quality events.") {
     <div class="span9">
       <table class="table table-striped table-bordered">
