Added external event to column in alerts view

--- a/app/views/privatemonitoring/privatealerts.scala.html
+++ b/app/views/privatemonitoring/privatealerts.scala.html
@@ -36,6 +36,7 @@ Copyright 2013 Anthony Christe
               <th>Timestamp</th>
               <th>Duration (ms)</th>
               <th>Alert Value</th>
+              <th>External Event</th>
               <th>Details</th>
             </tr>
           </thead>
@@ -54,6 +55,11 @@ Copyright 2013 Anthony Christe
                 }
                 @if(alert.getAlertType.equals(org.openpowerquality.protocol.OpqPacket.PacketType.ALERT_VOLTAGE)) {
                   Volts
+                }
+              </td>
+              <td>
+                @if(alert.getExternalEvent != null) {
+                  @alert.getExternalEvent.getEventType
                 }
               </td>
               <td>
