--- a/app/views/privatemonitoring/privatemeasurements.scala.html
+++ b/app/views/privatemonitoring/privatemeasurements.scala.html
@@ -16,8 +16,11 @@ along with opq-ao. If not, see <http://www.gnu.org/licenses/>.
 
 Copyright 2013 Anthony Christe
 *@
-
-@(measurements: List[Measurement])
+@(
+    measurements: List[Measurement],
+    deviceId: Long,
+    page: Integer
+    )
 
 @import helper._
   @implicitFieldConstructor = @{
@@ -26,7 +29,9 @@ Copyright 2013 Anthony Christe
 
 @privatepowerqualitymonitoring("Private Power Quality Monitoring - Private Measurements",
   "This page allows you to manage and create power quality events.") {
-    <div class="span9">
+
+  <div class="row span9">
+    <div>
       <table class="table table-striped table-bordered">
         <thead>
           <tr>
@@ -50,4 +55,13 @@ Copyright 2013 Anthony Christe
         </tbody>
       </table>
     </div>
+    <div class="pull-right">
+      @if(page > 0) {
+        <a href="@routes.PowerQualityMonitoring.privateMeasurementsMonitorByPage(deviceId, page - 1)"><- Prev.</a>
+      }
+      [@page]
+      <a href="@routes.PowerQualityMonitoring.privateMeasurementsMonitorByPage(deviceId, page + 1)"> Next. -></a>
+    </div>
+  </div>
+
 }
