--- a/app/views/privatemonitoring/privatemeasurements.scala.html
+++ b/app/views/privatemonitoring/privatemeasurements.scala.html
@@ -32,6 +32,9 @@ Copyright 2013 Anthony Christe
 
   <div class="row span9">
     <div>
+
+    </div>
+    <div>
       <table class="table table-striped table-bordered">
         <thead>
           <tr>
@@ -57,10 +60,10 @@ Copyright 2013 Anthony Christe
     </div>
     <div class="pull-right">
       @if(page > 0) {
-        <a href="@routes.PowerQualityMonitoring.privateMeasurementsMonitorByPage(deviceId, page - 1)"><- Prev.</a>
+        <a href="@routes.PowerQualityMonitoring.privateMeasurementsMonitorByPage(deviceId, page - 1)" class="btn btn-primary"><- Prev.</a>
       }
       [@page]
-      <a href="@routes.PowerQualityMonitoring.privateMeasurementsMonitorByPage(deviceId, page + 1)"> Next. -></a>
+      <a href="@routes.PowerQualityMonitoring.privateMeasurementsMonitorByPage(deviceId, page + 1)" class="btn btn-primary"> Next. -></a>
     </div>
   </div>
 
