Sort-of working filter on measurements. Hackish, but a starting point. #6

--- a/public/stylesheets/opq-ao.css
+++ b/public/stylesheets/opq-ao.css
@@ -2,7 +2,7 @@
     margin-top: 10px;
 }
 
-/* Image in Hero Unit */
+/* Image in Hero TimeUnit */
 .hero-unit {
     background-image: url('../images/smartgrid.png');
     background-size: cover;
