--- a/app/views/privatemonitoring/privatemeasurements.scala.html
+++ b/app/views/privatemonitoring/privatemeasurements.scala.html
@@ -31,8 +31,37 @@ Copyright 2013 Anthony Christe
 @privatepowerqualitymonitoring("Private Power Quality Monitoring - Private Measurements",
   "This page allows you to manage and create power quality events.") {
 
+
+
   <div class="row span9">
-    <div>
+    <div class="well well-small">
+      <p>Filter Measurements</p>
+      @*
+      @helper.form(action = routes.PowerQualityMonitoring.filterMeasurements()) {
+        @select(
+          filterForm("timeUnit"),
+          options = options(utils.FormUtils.LIST_OF_STATES),
+          'id -> "timeUnit",
+          '_label -> "Test",
+          '_default -> "All Measurements"
+          )
+      }
+      *@
+
+      <form class="form-inline" action="@deviceId" id="filterForm" method="get">
+        <input type="hidden" id="after" name="after"/>
+        <div class="control-group">
+          <label class="control-label" for="pastTimeSelect">After past</label>
+          <select id="pastTimeSelect">
+          @for(option <- utils.DateUtils.TimeUnit.values()) {
+            <option>@option</option>
+          }
+          </select>
+        </div>
+        <div class="control-group">
+          <a class="btn btn-warning pull-right" id="filterMeasurements">Filter Results</a>
+        </div>
+      </form>
 
     </div>
     <div>
@@ -67,5 +96,16 @@ Copyright 2013 Anthony Christe
       <a href="@routes.PowerQualityMonitoring.privateMeasurementsMonitorByPage(deviceId, page + 1)" class="btn btn-primary"> Next. -></a>
     </div>
   </div>
+
+  <script type="text/javascript">
+    $( "#filterMeasurements" ).click(function(){
+      var selected = $("#pastTimeSelect option:selected" ).text();
+      var now = getMillisecondsSinceEpoch();
+      var diff = now - getMillisFromUnit(selected);
+
+      $("#after" ).val(diff);
+      $("#filterForm" ).submit();
+    });
+  </script>
 
 }
