--- a/app/views/privatemonitoring/privatemeasurements.scala.html
+++ b/app/views/privatemonitoring/privatemeasurements.scala.html
@@ -54,7 +54,7 @@ Copyright 2013 Anthony Christe
           </select>
         </div>
         <div class="control-group">
-          <input type="submit" value="Filter"/>
+          <input type="submit" class="btn btn-info" value="Filter"/>
         </div>
       </form>
 
