--- a/app/views/privatemonitoring/privatemeasurements.scala.html
+++ b/app/views/privatemonitoring/privatemeasurements.scala.html
@@ -37,7 +37,7 @@ Copyright 2013 Anthony Christe
     <div class="well well-small">
       <p>Filter Measurements</p>
 
-      <form class="form-inline" action="@routes.PowerQualityMonitoring.filterMeasurements()" id="filterForm" method="post">
+      <form class="form-inline" action="@routes.Measurements.filterMeasurements()" id="filterForm" method="post">
         <input type="hidden" id="deviceId" name="deviceId" value="@deviceId"/>
         <div class="control-group">
           <label class="control-label" for="pastTimeSelect">After past</label>
@@ -85,10 +85,10 @@ Copyright 2013 Anthony Christe
     </div>
     <div class="pull-right">
       @if(page > 0) {
-        <a href="@routes.PowerQualityMonitoring.privateMeasurementsMonitorByPage(deviceId, page - 1)" class="btn btn-primary"><- Prev.</a>
+        <a href="@routes.Measurements.measurementsByPage(deviceId, page - 1)" class="btn btn-primary"><- Prev.</a>
       }
       [@(page + 1)/@(pages + 1)]
-      <a href="@routes.PowerQualityMonitoring.privateMeasurementsMonitorByPage(deviceId, page + 1)" class="btn btn-primary"> Next. -></a>
+      <a href="@routes.Measurements.measurementsByPage(deviceId, page + 1)" class="btn btn-primary"> Next. -></a>
     </div>
   </div>
 
