--- a/app/views/privatemonitoring/privatepowerqualitymonitoring.scala.html
+++ b/app/views/privatemonitoring/privatepowerqualitymonitoring.scala.html
@@ -37,7 +37,7 @@ Copyright 2013 Anthony Christe
       <ul class="nav  nav-pills nav-stacked">
         @createMenuItem("Private Alerts", "alerts", routes.PowerQualityMonitoring.privateAlertsMonitor())
         @createMenuItem("Alerts Near Me", "near", routes.PowerQualityMonitoring.privateAlertsMonitor())
-        @createMenuItem("Private Measurements", "measurements", routes.PowerQualityMonitoring.privateMeasurementsMonitor())
+        @createMenuItem("Private Measurements", "measurements", routes.Measurements.measurements())
       </ul>
       <div class="well">
         <p>
