--- a/app/views/privatemonitoring/privatealerts.scala.html
+++ b/app/views/privatemonitoring/privatealerts.scala.html
@@ -16,7 +16,11 @@ along with opq-ao. If not, see <http://www.gnu.org/licenses/>.
 
 Copyright 2013 Anthony Christe
 *@
-@(alerts: List[Alert])
+@(
+    alerts: List[Alert],
+    page: Integer,
+    pages: Integer
+    )
 
 @import helper._
   @implicitFieldConstructor = @{
@@ -95,6 +99,12 @@ Copyright 2013 Anthony Christe
         </tbody>
       </table>
     </div>
-
+    <div class="pull-right">
+      @if(page > 0) {
+        <a href="@routes.PowerQualityMonitoring.alertsByPage(page - 1)" class="btn btn-primary"><- Prev.</a>
+      }
+      [@(page + 1)/@(pages + 1)]
+      <a href="@routes.PowerQualityMonitoring.alertsByPage(page + 1)" class="btn btn-primary"> Next. -></a>
+    </div>
   </div>
 }
