Alerts are not paginated and filterable. #6

--- a/app/views/privatemonitoring/privatealerts.scala.html
+++ b/app/views/privatemonitoring/privatealerts.scala.html
@@ -33,8 +33,7 @@ Copyright 2013 Anthony Christe
   <div class="row span9">
     <div class="well well-small">
       <p>Filter Events</p>
-      <form class="form-inline" action="@routes.Measurements.filterMeasurements()" id="filterForm" method="post">
-        @*<input type="hidden" id="deviceId" name="deviceId" value="@deviceId"/>*@
+      <form class="form-inline" action="@routes.PowerQualityMonitoring.filterAlerts()" id="filterForm" method="post">
         <div class="control-group">
           <label class="control-label" for="pastTimeSelect">After past</label>
 
