--- a/app/views/menu.scala.html
+++ b/app/views/menu.scala.html
@@ -43,7 +43,7 @@ Copyright 2013 Anthony Christe
             @createMenuItem("Home", "home", routes.Application.index())
             @createMenuItem("Administration", "administration", routes.Administration.user())
             @createMenuItem("Private Power Quality Monitoring", "private power quality monitoring",
-              routes.PowerQualityMonitoring.alertsByPage())
+              routes.Events.eventsByPage())
             @createMenuItem("Public Power Quality Monitoring", "public power quality monitoring",
               routes.PowerQualityMonitoring.publicMonitor())
           }
