More refactoring and nomenclature changes. Routes and soem views have benn switched to event. #34

--- a/app/views/privatemonitoring/privateevents.scala.html
+++ b/app/views/privatemonitoring/privateevents.scala.html
@@ -27,7 +27,7 @@ Copyright 2013 Anthony Christe
     FieldConstructor(twitterBootstrapInput.render)
   }
 
-@privatepowerqualitymonitoring("Private Power Quality Monitoring - Private Alerts",
+@privatepowerqualitymonitoring("Private Power Quality Monitoring - Private Events",
   "This page allows you to manage and create power quality events.") {
 
   <div class="row span9">
