--- a/app/views/privatemonitoring/privatepowerqualitymonitoring.scala.html
+++ b/app/views/privatemonitoring/privatepowerqualitymonitoring.scala.html
@@ -35,8 +35,8 @@ Copyright 2013 Anthony Christe
       <!-- Side menu -->
     <div class="span3">
       <ul class="nav  nav-pills nav-stacked">
-        @createMenuItem("Private Events", "events", routes.Events.eventsByPage())
-        @createMenuItem("Events Near Me", "near", routes.Events.eventsByPage())
+        @createMenuItem("Private Events", "private events", routes.Events.eventsByPage())
+        @createMenuItem("Nearby Events", "nearby", routes.Events.nearbyEvents())
         @createMenuItem("Private Measurements", "measurements", routes.Measurements.measurements())
       </ul>
       <div class="well">
