--- a/app/views/privatemonitoring/nearbyevents.scala.html
+++ b/app/views/privatemonitoring/nearbyevents.scala.html
@@ -59,6 +59,7 @@ Copyright 2013 Anthony Christe
       <table class="table table-striped table-bordered">
         <thead>
           <tr>
+            <th>Device Id</th>
             <th>Distance</th>
             <th>Event Type</th>
             <th>Timestamp</th>
@@ -70,6 +71,7 @@ Copyright 2013 Anthony Christe
         <tbody>
         @for(event <- events) {
           <tr>
+            <td>@event.getDevice.getDeviceId</td>
             <td>[TODO distance]</td>
             <td>@event.getAlertType.getName</td>
             <td>@utils.DateUtils.toDateTime(event.getTimestamp)</td>
