Creating a device from the device admin page now updates data sharing correctly. #42

--- a/app/views/admin/updatedatashare.scala.html
+++ b/app/views/admin/updatedatashare.scala.html
@@ -67,7 +67,7 @@ Copyright 2013 Anthony Christe
           @* Sharing Data *@
           <td>
             @checkbox(opqDeviceForm("sharingData"), '_showConstraints -> false, '_label -> "")
-            <input type="hidden" name="sharingData" value="false" />
+            <input type="hidden" id="sharingData" name="sharingData" value="false" />
           </td>
 
           <td>
