--- a/app/views/admin/admindevice.scala.html
+++ b/app/views/admin/admindevice.scala.html
@@ -77,6 +77,7 @@ Copyright 2013 Anthony Christe
                 'class -> "input-small",
                 'id -> "deviceDescription")
               </td>
+              <input type="hidden" name="sharingData" id="sharingData" value="false" />
               <td>
                 <input type="submit" value="Add Device" class="btn btn-primary pull-right" />
               </td>
