Can now create device from wizard and data sharing property is updated accordingly. #42

--- a/app/views/wizard/wizard_data_sharing.scala.html
+++ b/app/views/wizard/wizard_data_sharing.scala.html
@@ -36,6 +36,7 @@ Copyright 2013 Anthony Christe
       <input type="hidden" id="gridCol" name="gridCol" />
 
       @checkbox(opqDeviceForm("sharingData"), '_showConstraints -> false, '_label -> "Data Sharing")
+      <input type="hidden" name="sharingData" id="sharingData" value="false" />
     </div>
   </div>
   <div class="row">
