--- a/app/views/privatemonitoring/nearbyevents.scala.html
+++ b/app/views/privatemonitoring/nearbyevents.scala.html
@@ -79,15 +79,15 @@ Copyright 2013 Anthony Christe
               }
 
             </td>
-            <td>@event.getAlertType.getName</td>
+            <td>@event.getEventType.getName</td>
             <td>@utils.DateUtils.toDateTime(event.getTimestamp)</td>
-            <td>@event.getAlertDuration</td>
+            <td>@event.getEventDuration</td>
             <td>
-              @event.getAlertValue
-              @if(event.getAlertType.equals(org.openpowerquality.protocol.OpqPacket.PacketType.ALERT_FREQUENCY)) {
+              @event.getEventValue
+              @if(event.getEventType.equals(org.openpowerquality.protocol.OpqPacket.PacketType.ALERT_FREQUENCY)) {
                 Hz
               }
-              @if(event.getAlertType.equals(org.openpowerquality.protocol.OpqPacket.PacketType.ALERT_VOLTAGE)) {
+              @if(event.getEventType.equals(org.openpowerquality.protocol.OpqPacket.PacketType.ALERT_VOLTAGE)) {
                 Volts
               }
             </td>
