--- a/app/views/publicpowerqualitymonitoring.scala.html
+++ b/app/views/publicpowerqualitymonitoring.scala.html
@@ -148,12 +148,12 @@ Copyright 2013 Anthony Christe
         return makeTable(["Device ID", deviceId, "Latitude", latitude, "Longitude", longitude]);
         }
 
-        function alertTemplate(alertType, timestamp, duration, alertValue, latitude, longitude) {
+        function alertTemplate(eventType, timestamp, duration, eventValue, latitude, longitude) {
         return makeTable([
-        "Alert Type", alertType,
+        "Alert Type", eventType,
         "Date", timestamp,
         "Duration", duration,
-        "Alert Value", alertValue,
+        "Alert Value", eventValue,
         "Latitude", latitude,
         "Longitude", longitude
         ]);
@@ -169,15 +169,15 @@ Copyright 2013 Anthony Christe
         // Display alerts
         @for(alert <- alerts) {
           @if(alert.getDevice != null) {
-            @if(alert.getAlertType().equals(models.Alert.AlertType.FREQUENCY)) {
+            @if(alert.getEventType().equals(models.Alert.AlertType.FREQUENCY)) {
               L.marker([@alert.getDevice.getLatitude, @alert.getDevice.getLongitude], {icon: frequencyMarker}).addTo(map)
-              .bindPopup(alertTemplate('@alert.getAlertType', '@utils.DateUtils.toDateTime(alert.getTimestamp)', @alert.getAlertDuration + ' ms',
-              @alert.getAlertValue + 'Hz', @alert.getDevice.getLatitude, @alert.getDevice.getLongitude));
+              .bindPopup(alertTemplate('@alert.getEventType', '@utils.DateUtils.toDateTime(alert.getTimestamp)', @alert.getEventDuration + ' ms',
+              @alert.getEventValue + 'Hz', @alert.getDevice.getLatitude, @alert.getDevice.getLongitude));
             }
-            @if(alert.getAlertType().equals(models.Alert.AlertType.VOLTAGE)) {
+            @if(alert.getEventType().equals(models.Alert.AlertType.VOLTAGE)) {
               L.marker([@alert.getDevice.getLatitude, @alert.getDevice.getLongitude], {icon: voltageMarker}).addTo(map)
-              .bindPopup(alertTemplate('@alert.getAlertType', '@utils.DateUtils.toDateTime(alert.getTimestamp)', @alert.getAlertDuration + ' ms',
-              @alert.getAlertValue + ' V', @alert.getDevice.getLatitude, @alert.getDevice.getLongitude));
+              .bindPopup(alertTemplate('@alert.getEventType', '@utils.DateUtils.toDateTime(alert.getTimestamp)', @alert.getEventDuration + ' ms',
+              @alert.getEventValue + ' V', @alert.getDevice.getLatitude, @alert.getDevice.getLongitude));
             }
           }
       }   *@
