--- a/app/views/privatemonitoring/nearbyevents.scala.html
+++ b/app/views/privatemonitoring/nearbyevents.scala.html
@@ -92,8 +92,8 @@ Copyright 2013 Anthony Christe
               }
             </td>
             <td>
-            @if(event.getExternalEvent != null) {
-              @event.getExternalEvent.getEventType
+            @if(event.getExternalCause != null) {
+              @event.getExternalCause.getCauseType
             }
             </td>
           </tr>
