Refactored AlertNotification->Alert. #34

--- a/app/views/admin/adminalert.scala.html
+++ b/app/views/admin/adminalert.scala.html
@@ -17,8 +17,8 @@ along with opq-ao. If not, see <http://www.gnu.org/licenses/>.
 Copyright 2013 Anthony Christe
 *@
 
-@(alertNotificationForm: Form[AlertNotification],
-    alertNotificationForms: List[Form[AlertNotification]],
+@(alertNotificationForm: Form[Alert],
+    alertNotificationForms: List[Form[Alert]],
     deviceIds: List[String])
 
 @import helper._
