--- a/app/views/wizard/wizard.scala.html
+++ b/app/views/wizard/wizard.scala.html
@@ -20,7 +20,7 @@ Copyright 2013 Anthony Christe
 @(
     personForm: Form[models.Person],
     opqDeviceForm: Form[models.OpqDevice],
-    alertNotificationForm: Form[models.AlertNotification]
+    alertNotificationForm: Form[models.Alert]
     )
 
   @import helper._
