--- a/app/views/wizard/wizard_alert_notifications.scala.html
+++ b/app/views/wizard/wizard_alert_notifications.scala.html
@@ -17,7 +17,7 @@ along with opq-ao. If not, see <http://www.gnu.org/licenses/>.
 Copyright 2013 Anthony Christe
 *@
 
-@(alertNotificationForm: Form[models.AlertNotification])
+@(alertNotificationForm: Form[models.Alert])
 
   @import helper._
   @implicitFieldConstructor = @{
