--- a/app/views/privatemonitoring/nearbyevents.scala.html
+++ b/app/views/privatemonitoring/nearbyevents.scala.html
@@ -41,7 +41,7 @@ Copyright 2013 Anthony Christe
 
           <select id="pastTimeSelect" name="pastTimeSelect">
           @for(option <- utils.DateUtils.TimeUnit.values()) {
-            @if(option.toString.equals(flash.get("pastTimeSelect"))) {
+            @if(option.toString.equals(session.get("pastTimeSelectNearby"))) {
               <option selected>
               } else {
               <option>
