--- a/app/views/privatemonitoring/privatemeasurements.scala.html
+++ b/app/views/privatemonitoring/privatemeasurements.scala.html
@@ -44,7 +44,7 @@ Copyright 2013 Anthony Christe
 
           <select id="pastTimeSelect" name="pastTimeSelect">
           @for(option <- utils.DateUtils.TimeUnit.values()) {
-            @if(option.toString.equals(flash.get("pastTimeSelect"))) {
+            @if(option.toString.equals(session.get("pastTimeSelectMeasurements"))) {
               <option selected>
             } else {
               <option>
