Nearby events drop down is now saved on page change. #48

--- a/app/views/privatemonitoring/nearbyevents.scala.html
+++ b/app/views/privatemonitoring/nearbyevents.scala.html
@@ -35,7 +35,8 @@ Copyright 2013 Anthony Christe
   <div class="row span9">
     <div class="well well-small">
       <p>Filter Events</p>
-      <form class="form-inline" action="@routes.Events.filterEvents()" id="filterForm" method="post">
+      <form class="form-inline" action="@routes.Events.filterNearbyEvents()" id="filterForm" method="post">
+        <input type="hidden" id="deviceId" name="deviceId" value="@deviceId" />
         <div class="control-group">
           <label class="control-label" for="pastTimeSelect">After past</label>
 
