--- a/app/views/privatemonitoring/privatemeasurements.scala.html
+++ b/app/views/privatemonitoring/privatemeasurements.scala.html
@@ -84,11 +84,20 @@ Copyright 2013 Anthony Christe
       </table>
     </div>
     <div class="pull-right">
-      @if(page > 0) {
-        <a href="@routes.Measurements.measurementsByPage(deviceId, page - 1)" class="btn btn-primary"><- Prev.</a>
+      @if(session.get("measurementsAfterAmount") == null) {
+        @if(page > 0) {
+          <a href="@routes.Measurements.measurementsByPage(deviceId, page - 1)" class="btn btn-primary"><- Prev.</a>
+        }
+        [@(page + 1)/@(pages + 1)]
+        <a href="@routes.Measurements.measurementsByPage(deviceId, page + 1)" class="btn btn-primary"> Next. -></a>
+      } else {
+        @if(page > 0) {
+          <a href="@routes.Measurements.measurementsByPage(deviceId, page - 1, Long.parseLong(session.get("measurementsAfterAmount")))" class="btn btn-primary"><- Prev.</a>
+        }
+        [@(page + 1)/@(pages + 1)]
+        <a href="@routes.Measurements.measurementsByPage(deviceId, page + 1, Long.parseLong(session.get("measurementsAfterAmount")))" class="btn btn-primary"> Next. -></a>
       }
-      [@(page + 1)/@(pages + 1)]
-      <a href="@routes.Measurements.measurementsByPage(deviceId, page + 1)" class="btn btn-primary"> Next. -></a>
+
     </div>
   </div>
 
