--- a/app/views/privatemonitoring/privatemeasurements.scala.html
+++ b/app/views/privatemonitoring/privatemeasurements.scala.html
@@ -84,20 +84,19 @@ Copyright 2013 Anthony Christe
       </table>
     </div>
     <div class="pull-right">
-      @if(session.get("measurementsAfterAmount") == null) {
+      @defining(
+        if(session.get("measurementsAfterAmount") == null) {
+          0L
+        } else {
+          Long.parseLong(session.get("measurementsAfterAmount"))
+        }
+      ) { afterTimestamp =>
         @if(page > 0) {
-          <a href="@routes.Measurements.measurementsByPage(deviceId, page - 1)" class="btn btn-primary"><- Prev.</a>
+          <a href="@routes.Measurements.measurementsByPage(deviceId, page - 1, afterTimestamp)" class="btn btn-primary"><- Prev.</a>
         }
         [@(page + 1)/@(pages + 1)]
-        <a href="@routes.Measurements.measurementsByPage(deviceId, page + 1)" class="btn btn-primary"> Next. -></a>
-      } else {
-        @if(page > 0) {
-          <a href="@routes.Measurements.measurementsByPage(deviceId, page - 1, Long.parseLong(session.get("measurementsAfterAmount")))" class="btn btn-primary"><- Prev.</a>
-        }
-        [@(page + 1)/@(pages + 1)]
-        <a href="@routes.Measurements.measurementsByPage(deviceId, page + 1, Long.parseLong(session.get("measurementsAfterAmount")))" class="btn btn-primary"> Next. -></a>
+      <a href="@routes.Measurements.measurementsByPage(deviceId, page + 1, afterTimestamp)" class="btn btn-primary"> Next. -></a>
       }
-
     </div>
   </div>
 
